gl33-master/src/test/deca/context/invalid/other/mauvaisParametre.deca
class Hello {

    int a = 2;
    protected boolean b;

    int bonjour(boolean b) {
        println("hello");
        return a;
    }
}

{
    Hello x = new Hello();
    x.bonjour(true,2);
}